--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,32 +1,7 @@
 body{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito', sans-serif;
 
 }
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border: white;
-  }
-  input , textarea {
-    &:focus{
-      outline: none;
-    }
-  }
-  a{
-    text-decoration: none;
-    color: inherit;
-  }
-  ul{
-    list-style: none;
-  }
-  h1,h2,h3,h4,h5,h6{
-    font-family: 'Montserrat', sans-serif;
-  }
-  p,a{
-    font-family: 'Montserrat', sans-serif;
-
-  }
   
   .shadow {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -40,7 +15,7 @@ body{
   .white-text{
   color: #fff;
   }
-  section {
+  .section {
     color: $metal;
     min-height: 100vh;
     &:nth-child(odd){
@@ -57,43 +32,48 @@ body{
     align-items: center;
   }
   
-  .target{
-    width: 50px;
-    height: 50px;
-    display: flex;
-    background: darkcyan;
-  }
-  img{max-width: 100%}
-  .link{
-    cursor: pointer;
-  }
-  .text-center{
-    text-align: center;
-  }
-
-
-  .h1{
-    font-size: 68px ;
-    line-height: 100px;
-    font-weight: 700;
-    columns: #14151f;
-  }
-  .h2{
-    font-size: 37px ;
-    line-height: 50px;
-    font-weight: 700;
-    columns: #14151f;
-  }
   hr{
     margin-top: 10px;
     margin-bottom: 10px;
-    height: 5px;
-    width: 30px;
-    background: $accent;
-    align-self: flex-start;
+    height: 3px;
+    border-radius: 5px;
     width: 100%;
+    position: relative;
+    &::after{
+      position: absolute;
+      transform : translateX(-50%);
+      left: 50%;
+      top: 0;
+      width: 10%;
+      height: 100%;
+      background: #1c1c1c;
+      content:'';
+    }
   }
 
   .dn{
     display: none!important;
   }
+  a{
+    color: inherit;
+    text-decoration: inherit;
+  }
+  ul{
+    list-style: none;
+  }
+  .fh{
+    min-height: 100vh;
+  }
+  .w-100{
+    width: 100%;
+  }
+
+
+  .img{
+    transition: filter .7s,
+
+  }
+  .blured{
+    filter: blur(10px);
+  }
+  
