--- a/src/styles/content/_hero.scss
+++ b/src/styles/content/_hero.scss
@@ -1,30 +1,28 @@
 
 #hero{
-    position: relative;
-    overflow: hidden;
-    .slide{
-        position: absolute;
-        min-width: 100%;
-        height: 100%;
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-size: cover;
-    }
-    .slide1{
-        background: url('https://images.pexels.com/photos/3098681/pexels-photo-3098681.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940')no-repeat center; 
-        transform: translateX(0%);
-    }
-    .slide2{
-        background: url('https://images.pexels.com/photos/2873479/pexels-photo-2873479.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') no-repeat center ;
-        transform: translateX(0%);
-        
-    }
-    .slide3{
-        background: url('https://images.pexels.com/photos/2402888/pexels-photo-2402888.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') no-repeat center;
-        transform: translateX(0%);
-    }
-    
+  min-height: 100vh;
+  background-size:cover;
+  background-attachment: fixed;
+}
+.logo{
+  width: 27%;
+  opacity: 0;
+  max-width: 50%;
+  opacity: 0;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.hero-button{
+  margin-bottom: 20px;
+  opacity: 0;
 }
 
+.hero-box{
+  padding-top: 50px!important;
+  background: rgba(white, 0.5);
+  border-radius: 2px;
+}
+.logotext{
+  width: 360px!important;
+  max-width: 80%;
+}
