--- a/src/styles/ui/_siedenav.scss
+++ b/src/styles/ui/_siedenav.scss
@@ -1,67 +1,31 @@
 .sidenav{
-    background: $metal;
-    z-index: 14!important;
-    padding-top: 100px;
     position: fixed;
-    top: 0;
-    right: -250px;
-    width: 250px;
-    max-width: 100vw;
-    height: 100vh;
-    transition: all ease-in-out 0.3s;
-    .arrow-side{
-        position: absolute;
-        left: 10px;
-        top: 10px;
-        width: 50px;
-        height:50px;
-        cursor: pointer;
-        padding: 5px;
-        background: #f7f7f7;
-        transition: all ease-in-out 0.2s;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
+    height: calc(100vh - 70px);
+    top: 70px;
+    width: 300px;
+    background: white;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    left: -300px;
+    padding-top: 0px;
+    .sidenavLink{
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        margin-top: 10px;      
+        margin-bottom: 10px;      
+        transition: background-color 0.3s ease-out ;
         &:hover{
-            padding-left: 15px;
-        }
-        svg{
-            transform: rotate(270deg);
-        }
-    }
-    ul{
-        
-        li{
-            background : $accent;
-            padding: 10px;
-            overflow: hidden;
-            cursor: pointer;
-            transition: 0.3s ease-in-out letter-spacing;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-        }
-        li:hover{
-            letter-spacing: 4px;
-            background: rgba($accent,0.7);
+            background-color: $metal;
         }
     }
 }
-.sidenav-overlay{
-   transition: all ease-in-out 0.3s;
-    position: fixed;
-    left: 0;
-    top: 0;
-    background: #333;
-    opacity: 0.9;
-    width: 100vw;
-    height: 100vh;
 
-}
-.closed{
-    right: -250px;
-    opacity: 0;
-}
-.overClosed{
+.overlay{
+    position: fixed;
+    width: 100vw;
+    height: calc(100vh - 70px);
+    top: 70px;
+    background: rgba(0,0,0,0.24);
     left: -100vw;
     opacity: 0;
+    filter:blur(3px);
+    
 }
