--- a/src/styles/ui/_psi.scss
+++ b/src/styles/ui/_psi.scss
@@ -14,7 +14,7 @@
         height: 100%;
         width: 0%;
         background: $accent;  /* fallback for old browsers */
-        background: #0A7758; 
+        background: $accent; 
     }
 }
 
