--- a/src/styles/ui/_siedenav.scss
+++ b/src/styles/ui/_siedenav.scss
@@ -13,7 +13,24 @@
         margin-bottom: 10px;      
         transition: background-color 0.3s ease-out ;
         &:hover{
-            background-color: $metal;
+            background-color: $silver;
+            color: $accent;
+        }
+    }
+    .sidenavhref{
+        text-align: right;
+        
+      //  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        &:hover{
+            color: $accent;
+            svg{
+                fill : $accent
+            }
+
+        }
+        svg{
+            width: 24px;
+            margin-right: 10px;
         }
     }
 }
