--- a/src/scripts/styles.scss
+++ b/src/scripts/styles.scss
@@ -1,4 +1,25 @@
-$color : blue;
+$color : #1c1c1c;
 body{
     background:  $color;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container{
+    margin-top: 100px;
+    width: 800px;
+    max-width: 95vw;
+    margin-left: auto;
+    margin-right: auto;
+    background: #2c2c2c;
+    color: white;
+    padding: 20px;
+    h1{
+        font-size: 30px;
+        line-height: 40px;
+        font-weight: bold;
+    }
+    img{
+        max-width: 100%;
+    }
 }
